fix: substitution name

--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -22,7 +22,7 @@ steps:
     - > 
       gcloud deploy releases create release-$BUILD_ID
       --delivery-pipeline=${_DELIVERY_PIPELINE_NAME}
-      --region=${REGION}
+      --region=${_REGION}
       --source=./
       --images=${_ARTIFACT_URL}/${_PROJECT_ID}/${_FOLDER_NAME}/${_SERVICE_NAME}:latest
 
